# claw-kernel

./: .gitignore  .markdown-link-check.json  AGENTS.md  AUDIT_REPORT.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Code_Review_Report.md  DOCUMENTATION_AUDIT_REPORT.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  llm-index.md  llms.txt  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  doc-quality.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-workspace-check.txt  (+1 more)
claw-kernel/: Cargo.toml
claw-kernel-server/: Cargo.toml
claw-kernel-server/src/: main.rs
claw-kernel/src/: cli.rs  lib.rs  main.rs
crates/claw-channel/: Cargo.toml
crates/claw-channel/src/: discord.rs  error.rs  lib.rs  retry.rs  router.rs  stdin.rs  traits.rs  types.rs  webhook.rs
crates/claw-channels/: Cargo.toml
crates/claw-channels/src/: discord.rs  lib.rs  websocket.rs
crates/claw-loop/: Cargo.toml
crates/claw-loop/src/: agent_loop.rs  builder.rs  error.rs  history.rs  lib.rs  sqlite_history.rs  state_machine.rs  stop_conditions.rs  summarizer.rs  traits.rs  types.rs
crates/claw-memory/: Cargo.toml
crates/claw-memory/src/: config.rs  error.rs  lib.rs  secure.rs  traits.rs  types.rs  worker.rs
crates/claw-memory/src/embedding/: mod.rs  ngram.rs
crates/claw-memory/src/sqlite/: history.rs  mod.rs  store.rs
crates/claw-pal/: Cargo.toml
crates/claw-pal/src/: audit.rs  credential_store.rs  dirs.rs  error.rs  lib.rs  lockfile.rs  manager.rs  retry.rs  security.rs
crates/claw-pal/src/config/: loader.rs  mod.rs
crates/claw-pal/src/ipc/: framing.rs  mod.rs  transport.rs
crates/claw-pal/src/linux/: mod.rs  sandbox.rs
crates/claw-pal/src/macos/: mod.rs  sandbox.rs
crates/claw-pal/src/traits/: ipc.rs  mod.rs  process.rs  sandbox.rs
crates/claw-pal/src/types/: ipc.rs  mod.rs  process.rs  sandbox.rs
crates/claw-pal/src/windows/: mod.rs  sandbox.rs
crates/claw-pal/tests/: integration.rs  sandbox_linux_test.rs
crates/claw-provider/: Cargo.toml
crates/claw-provider/src/: embedding.rs  error.rs  lib.rs  providers.rs  retry.rs  stream_utils.rs  streaming.rs  traits.rs  transport.rs  types.rs
crates/claw-provider/src/anthropic/: format.rs  mod.rs
crates/claw-provider/src/azure_openai/: mod.rs
crates/claw-provider/src/deepseek/: mod.rs
crates/claw-provider/src/gemini/: mod.rs
crates/claw-provider/src/mistral/: mod.rs
crates/claw-provider/src/moonshot/: mod.rs
crates/claw-provider/src/ollama/: format.rs  mod.rs
crates/claw-provider/src/openai/: format.rs  mod.rs
crates/claw-provider/tests/: anthropic_integration_test.rs  deepseek_integration_test.rs  moonshot_integration_test.rs  ollama_integration_test.rs  openai_integration_test.rs
crates/claw-runtime/: Cargo.toml
crates/claw-runtime/src/: agent_handle.rs  agent_types.rs  cron_scheduler.rs  discovery.rs  error.rs  event_bus.rs  event_trigger.rs  events.rs  extension.rs  ipc_router.rs  lib.rs  orchestrator.rs  process.rs  restart_policy.rs  runtime.rs  traits.rs  trigger_dispatcher.rs  trigger_event.rs  trigger_store.rs  webhook_server.rs
crates/claw-runtime/src/a2a/: mod.rs  protocol.rs  routing.rs
crates/claw-runtime/src/ipc_router/: acceptor.rs  codec.rs  endpoint_registry.rs  mod.rs  router.rs
crates/claw-runtime/src/schedule/: error.rs  mod.rs  tokio_scheduler.rs
crates/claw-runtime/src/webhook/: axum_server.rs  error.rs  mod.rs  verification.rs
crates/claw-runtime/tests/: stress_event_bus.rs  stress_orchestrator.rs
crates/claw-script/: Cargo.toml
crates/claw-script/examples/: hot_reload_example.rs
crates/claw-script/src/: error.rs  lib.rs  tool_compiler.rs  traits.rs  types.rs
crates/claw-script/src/bridge/: agent.rs  conversion.rs  dirs.rs  events.rs  fs.rs  llm.rs  memory.rs  mod.rs  net.rs  tools.rs  tools_bridge.rs
crates/claw-script/src/hot_reload/: config.rs  events.rs  manager.rs  mod.rs  module.rs  watcher.rs
crates/claw-script/src/lua/: engine.rs  mod.rs
crates/claw-script/src/v8/: bridge.rs  engine.rs  mod.rs  transpile.rs
crates/claw-script/tests/: bridge_integration_test.rs
crates/claw-server/: Cargo.toml
crates/claw-server/src/: channel_event_publisher.rs  channel_registry.rs  error.rs  event_publisher.rs  event_trigger.rs  global_skill_registry.rs  global_tool_registry.rs  handler.rs  hot_loader.rs  lib.rs  protocol.rs  server.rs  session.rs  tool_bridge.rs  trigger_store.rs
crates/claw-server/tests/: integration_test.rs
crates/claw-skills/: Cargo.toml
crates/claw-skills/src/: error.rs  index.rs  lib.rs  loader.rs  manifest.rs  priority.rs
crates/claw-tools/: Cargo.toml
crates/claw-tools/src/: error.rs  hot_loader.rs  lib.rs  registry.rs  sandbox.rs  traits.rs  types.rs
crates/claw-tools/src/audit/: mod.rs  writer.rs
crates/claw-tools/src/builtins/: file_read.rs  file_write.rs  mod.rs  shell_exec.rs  web_fetch.rs
crates/claw-tools/src/hot_reload/: mod.rs  processor.rs  validation.rs  versioned.rs  watcher.rs
crates/claw-tools/tests/: stress_registry.rs
docs/: KNOWN-ISSUES.md  README.md  README.zh.md  SECURITY-AUDIT.md  SEMVER.md  gap-analysis-v1.5.md  kernel-features.md  kernel-gap-analysis.md  openclaw-features.md  technical-feasibility-analysis.md  terminology.md  v1.5-gap-report.md
examples/: README.md
examples/custom-tool/: Cargo.toml
examples/custom-tool/src/: main.rs
examples/simple-agent/: Cargo.toml
examples/simple-agent/src/: main.rs
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/claw_kernel/: __init__.py  _auth.py  _rpc.py  _transport.py  async_client.py  async_transport.py  client.py  errors.py  models.py
sdk/python/examples/: agent_spawn.py  async_streaming.py  basic_chat.py  channel_webhook.py  scheduler_demo.py  tool_use.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py  test_models.py  test_transport.py
(+121 files in other folders)
