# claw-kernel Workspace Configuration
# 依赖版本已锁定，经过技术可行性验证

[workspace]
members = [
    "crates/claw-pal",
    "crates/claw-runtime",
    "crates/claw-provider",
    "crates/claw-tools",
    "crates/claw-loop",
    "crates/claw-memory",
    "crates/claw-channel",
    "crates/claw-script",
    "crates/claw-server",
    "claw-kernel",  # meta-crate
    "claw-kernel-server",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["claw-project contributors"]
edition = "2021"
rust-version = "1.83"  # 已验证：PyO3 0.28+ 需要 1.83+
license = "MIT OR Apache-2.0"
repository = "https://github.com/claw-project/claw-kernel"
description = "Modular AI agent kernel for Rust — 5-layer architecture, 5 LLM providers, Lua scripting"
keywords = ["ai", "agent", "llm", "lua", "async"]
categories = ["asynchronous", "science", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/claw-kernel"
homepage = "https://github.com/claw-project/claw-kernel"

# ============================================
# 内部 crates (Internal Crates) - 发布到 crates.io
# ============================================
[workspace.dependencies]
claw-pal = { path = "crates/claw-pal", version = "1.0.0" }
claw-runtime = { path = "crates/claw-runtime", version = "1.0.0" }
claw-provider = { path = "crates/claw-provider", version = "1.0.0" }
claw-tools = { path = "crates/claw-tools", version = "1.0.0" }
claw-loop = { path = "crates/claw-loop", version = "1.0.0" }
claw-memory = { path = "crates/claw-memory", version = "1.0.0" }
claw-channel = { path = "crates/claw-channel", version = "1.0.0" }
claw-script = { path = "crates/claw-script", version = "1.0.0" }
claw-server = { path = "crates/claw-server", version = "1.0.0" }

# ============================================
# 核心依赖 (Core Dependencies) - 已验证兼容
# ============================================
# 异步运行时 (Async Runtime) - 兼容 Rust 1.83+
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
async-trait = "0.1.77"

# 并发数据结构 (Concurrent Data Structures)
dashmap = "5.5.3"
futures = "0.3"
rand = "0.8"
uuid = { version = "1.7", features = ["v4"] }

# HTTP 客户端 (HTTP Client) - 兼容 Tokio 1.35+
reqwest = { version = "0.11.23", features = ["json", "stream", "rustls-tls"], default-features = false }

# 序列化 (Serialization)
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# 错误处理 (Error Handling)
thiserror = "1.0.56"
anyhow = "1.0.79"

# 日志与追踪 (Logging & Tracing)
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


# ============================================
# PAL 层依赖 (Platform Abstraction)
# ============================================
# IPC - 跨平台进程间通信
interprocess = { version = "1.2.1", features = ["tokio_support"] }

# 配置目录 - 跨平台标准目录
dirs = "5.0.1"

# Linux 沙箱
libseccomp = "0.3.0"
nix = { version = "0.27.1", features = ["process", "sched"] }

# 安全 (Security)
rust-argon2 = "0.8"
sha2 = "0.10"



# ============================================
# 脚本引擎 (Script Engines)
# ============================================
# Lua 引擎 - 默认，零额外依赖，兼容 Rust 1.83+
mlua = { version = "0.9.4", features = ["lua54", "async", "send", "serde"] }

# Deno/V8 引擎 - 需要 Node.js ≥ 20
deno_core = { version = "0.245.0" }

# Python 引擎 - 需要 Rust 1.83+, Python ≥ 3.10
pyo3 = { version = "0.28.0", features = ["auto-initialize"] }

# ============================================
# 工具与扩展 (Tools & Extensions)
# ============================================
# JSON Schema 生成
schemars = "0.8.16"

# 文件监视 (热加载)
notify = "6.1.1"

# SQLite 后端
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }

# sqlite-vec 向量搜索扩展
sqlite-vec = "0.1.6"

# 零拷贝字节转换（Vec<f32> → &[u8]）
zerocopy = { version = "0.8", features = ["derive"] }

# 临时文件（测试用）
tempfile = "3.9"

# 锁定旧版本以兼容 Rust 1.83
# time 0.3.36+ 需要 Rust 1.67+，但 time-core 0.1.8 需要 Rust 1.88+
time = { version = "0.3.36" }
time-core = { version = "=0.1.2" }
time-macros = { version = "=0.2.18" }
deranged = { version = "=0.3.11" }
getrandom = { version = "0.2.15" }

# ============================================
# Channel 层依赖
# ============================================
# Discord 集成
twilight-gateway = { version = "0.15.4" }
twilight-model = { version = "0.15.4" }

# HTTP Webhook
axum = { version = "0.7.4" }
tower = { version = "0.4.13" }




# ============================================
# 编译配置 (Build Profiles)
# ============================================
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[profile.test]
# Note: panic setting is ignored for test profile by Cargo,
# but we keep it here for documentation purposes and consistency.
# mlua requires panic = "unwind" in all other profiles.
panic = "unwind"


# ============================================
# 兼容性说明
# ============================================
# Rust 版本要求：
# - 默认构建 (engine-lua): Rust 1.75+
# - 含 PyO3 (engine-py): Rust 1.83+ (必须)
# 
# 由于 PyO3 0.28+ 强制要求 Rust 1.83+，
# 统一要求 Rust 1.83+ 以简化维护
# ============================================
