[package]
name = "claw-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
webhook = ["dep:axum", "dep:reqwest"]
discord = ["dep:twilight-gateway", "dep:twilight-model", "dep:twilight-http"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
twilight-gateway = { workspace = true, optional = true }
twilight-model = { workspace = true, optional = true }
twilight-http = { version = "0.15.4", optional = true }
