[package]
name = "claw-loop"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
claw-provider = { path = "../claw-provider" }
claw-tools = { path = "../claw-tools" }
claw-memory = { path = "../claw-memory" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
