[package]
name = "claw-loop"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent loop engine with FSM, history management, and stop conditions"
repository.workspace = true

[dependencies]
claw-provider = { workspace = true }
claw-tools = { workspace = true }
claw-memory = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
