[package]
name = "claw-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
claw-runtime = { path = "../claw-runtime" }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
