[package]
name = "claw-pal"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
dirs = { workspace = true }
rust-argon2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { workspace = true }
nix = { workspace = true }
