[package]
name = "claw-pal"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform Abstraction Layer — IPC, process management, sandbox, dirs"
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
dirs = { workspace = true }
rust-argon2 = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
figment = { version = "0.10.19", features = ["toml", "env"] }
shellexpand = "3.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { workspace = true, optional = true }
nix = { workspace = true, features = ["resource"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["process", "sched", "signal"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net"] }
windows-sys = { version = "0.52", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = []
sandbox-tests = ["libseccomp"]
strict-security = []

[dev-dependencies]
toml = "0.8"
tempfile = { workspace = true }
