[package]
name = "claw-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider implementations — Anthropic, OpenAI, Ollama, DeepSeek, Moonshot"
repository.workspace = true

[features]
default = []
test-utils = []

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = "1"
rand = "0.8"
async-stream = "0.3"
