[package]
name = "claw-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider implementations — Anthropic, OpenAI, Ollama, DeepSeek, Moonshot"
repository.workspace = true

[features]
default = ["anthropic", "openai", "ollama", "deepseek", "moonshot"]
test-utils = []
anthropic = []
openai = []
ollama = []
# deepseek and moonshot re-use openai::format internally, so they imply openai.
deepseek = ["openai"]
moonshot = ["openai"]
# gemini/mistral/azure-openai use the OpenAI-compatible format, so they imply openai.
# No additional dependencies required beyond the openai feature.
gemini = ["openai"]
mistral = ["openai"]
azure-openai = ["openai"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = "1"
rand = "0.8"
async-stream = "0.3"
secrecy = { version = "0.8", features = ["alloc"] }
