[package]
name = "claw-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
claw-pal = { path = "../claw-pal" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "=3.10.0"
