[package]
name = "claw-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime — EventBus, AgentOrchestrator, IpcRouter, Schedule, Webhook"
repository.workspace = true

[dependencies]
claw-pal = { workspace = true }
claw-tools = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"

# Schedule & Webhook dependencies
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
sha2 = { workspace = true }
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[features]
default = ["webhook"]
webhook = ["dep:axum", "dep:tower"]

[dev-dependencies]
tempfile = "=3.10.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
