[package]
name = "claw-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Script engine abstraction — Lua (default), V8 and Python optional"
repository.workspace = true

[dependencies]
claw-tools = { workspace = true }
claw-memory = { workspace = true }
claw-runtime = { workspace = true }
claw-provider = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
mlua = { workspace = true, optional = true }
reqwest = { workspace = true }

[features]
default = ["engine-lua"]
engine-lua = ["dep:mlua"]
