[package]
name = "claw-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
schemars = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }
arc-swap = "1.7"
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
