[package]
name = "claw-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tool registry with hot-loading and JSON Schema generation"
repository.workspace = true

[features]
default = []
builtins = ["dep:reqwest"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
schemars = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }
arc-swap = "1.7"
glob = "0.3"
dirs = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
