[package]
name = "custom-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
claw-kernel = { path = "../../claw-kernel" }
claw-script = { path = "../../crates/claw-script" }
claw-tools = { path = "../../crates/claw-tools" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"

# Keep this package independent of the main workspace
[workspace]

[[bin]]
name = "custom-tool"
path = "src/main.rs"
