[package]
name = "simple-agent"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
claw-kernel = { path = "../../claw-kernel", version = "0.1" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"

[[bin]]
name = "simple-agent"
path = "src/main.rs"
