[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-kernel"
version = "1.4.1"
description = "Python SDK for the claw-kernel IPC daemon"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
dependencies = []  # zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_kernel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
